<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Logcat Reader</string>
  <string name="device_logs">Device Logs</string>
  <string name="saved_logs">Saved Logs</string>
  <string name="saved_logs_action">Saved logs</string>
  <string name="settings">Settings</string>
  <string name="start_recording">Start recording</string>
  <string name="stop_recording">Stop recording</string>
  <string name="logcat_service_channel_name">Logcat service</string>
  <string name="logcat_service">Logcat service</string>
  <string name="press_back_again_to_exit">Press back again to exit</string>
  <string name="pref_cat_general">General</string>
  <string name="pref_general_keep_screen_on">Keep screen on</string>
  <string name="pref_cat_appearance">Appearance</string>
  <string name="pref_theme_title">Theme</string>
  <string name="pref_theme_black_theme">Super Dark Theme</string>
  <string name="exit">Exit</string>
  <string name="search">Search</string>
  <string name="pause">Pause</string>
  <string name="resume">Resume</string>
  <string name="about">About</string>
  <string name="copy_adb_command">Copy ADB Command</string>
  <string name="copy_to_clipboard">Copy To Clipboard</string>
  <string name="copied_to_clipboard">Copied</string>

  <string name="save_to_file">Save</string>
  <string name="export">Export</string>
  <string name="logcat">Logcat</string>
  <string name="pref_poll_interval_title">Poll Interval</string>
  <string name="view_log">View</string>
  <string name="could_not_open_log_file">Could not open the log file</string>
  <string name="failed_to_save_logs">Failed to save logs</string>
  <string name="nothing_to_save">Nothing to save</string>
  <string name="open_with">Open with</string>
  <string name="read_logs_permission_required">Permission required</string>
  <string name="grant_read_logs_permission_instruction">To view all of the logs,
        READ_LOGS permission must be granted.\n\n
        1. Please connect your device to your computer via usb\n
        2. Run command:\n\n
        adb shell pm grant com.dp.logcatapp android.permission.READ_LOGS\n\n
        3. Close the app (double back press), and swipe it out of Recents.\n\n
        Please report if there are any issues, thank you!
    </string>
  <string name="grant_read_logs_permission_action_using_root">Grant</string>
  <string name="failed">Failed</string>
  <string name="pref_logcat_buffer_dialog_title">Buffers</string>
  <string name="restarting_logcat">Restarting logcat</string>
  <string name="saved_as_filename">Saved as %s</string>
  <string name="kill">Kill</string>
  <string name="app_kill_reason">Permission has been granted. Logcat Reader needs to be killed
        and has to be opened manually because typical app restart won\'t work in this case.
        This needs to be done only once.
    </string>
  <string name="started_recording">Started recording</string>
  <string name="log_priority">Log priority</string>
  <string name="pref_key_about_github_repo_title">GitHub Repository</string>
  <string name="pref_key_about_github_repo_summary">View source, create issues, etc</string>
  <string name="filter">Filter</string>
  <string name="empty">Empty</string>
  <string name="delete">Delete</string>
  <string name="share">Share</string>
  <string name="save">Save</string>
  <string name="error">Error</string>
  <string name="saved">Saved</string>
  <string name="error_saving">Error saving</string>
  <string name="external_storage_not_mounted_error">External storage is not mounted</string>
  <string name="pref_logcat_max_recent_logs_to_keep_in_memory">
        Max recent logs to keep in memory
    </string>
  <string name="not_a_valid_number">Not a valid number</string>
  <string name="cannot_be_less_than_1000">Cannot be less than 1000</string>
  <string name="value_must_be_greater_than_0">Value must be greater than 0</string>
  <string name="value_must_be_a_positive_integer">Value must be a positive integer</string>
  <string name="rename">Rename</string>
  <string name="log_count_fmt">%d log</string>
  <string name="log_count_fmt_plural">%d logs</string>
  <string name="select_all">Select all</string>
  <string name="saving">Saving…</string>
  <string name="save_location">Save location</string>
  <string name="save_location_internal">Internal</string>
  <string name="save_location_custom">Custom</string>
  <string name="err_msg_external_storage_not_writable">External storage not writable</string>
  <string name="select">Select</string>
  <string name="filters">Filters</string>
  <string name="add">Add</string>
  <string name="keyword">Keyword</string>
  <string name="tag">Tag</string>
  <string name="exclude">Exclude</string>
  <string name="exclusions">Exclusions</string>
  <string name="restart_logcat">Restart logcat</string>
  <string name="exclusion">Exclusion</string>
  <string name="clear">Clear</string>
  <string name="process_id" translatable="false">PID</string>
  <string name="thread_id" translatable="false">TID</string>
  <string name="log_level">Log level</string>
  <string name="message">Message</string>
  <string name="date">Date</string>
  <string name="time">Time</string>
  <string name="unable_to_share">Unable to share</string>
  <string name="permission_instruction0">Please follow the steps below to grant READ_LOGS permission (needs to be done only once):</string>
  <string name="permission_instruction1">1. Connect the phone to a computer with ADB tools installed.</string>
  <string name="permission_instruction2">2. Run the following command (single line):</string>
  <string name="permission_instruction3">adb shell pm grant com.dp.logcatapp android.permission.READ_LOGS</string>
  <string name="permission_instruction4">3. Close the app by double pressing the back button and swiping it out from the Recents.</string>
  <string name="permission_instruction5">4. Start the app again, and now you should see all of the logs.</string>
  <string name="permission_instruction6">Please report if there are any issues, thank you!</string>
  <string name="success">Success</string>
  <string name="fail">Fail</string>
  <string name="manual_method">Manual method</string>
  <string name="read_logs_permission_required_msg">"READ_LOGS permission is required.\n\nIf your device is rooted, please select 'Root method', otherwise, to grant the permission manually using ADB, please select 'Manual method'.\n\nThis needs to be done only once!"</string>
  <string name="root_method">Root method</string>
  <string name="asking_permission_for_root_access">Asking permission for ROOT access…</string>
  <string name="app_restart_dialog_title">App restart required</string>
  <string name="app_restart_dialog_msg_body">Tapping OK will kill the app. You should see a complete list of logs from now on.</string>
  <string name="select_export_format">Select export format</string>
  <string name="export_format_default">Default</string>
  <string name="export_format_single_line">Single line</string>
  <string name="error_opening_source">Error opening source</string>
  <string name="unsupported_source">Unsupported source</string>
  <string name="pref_general_keep_send_identificators">Send Identificators</string>
  <string name="pref_general_server_ip_title">Server IP</string>
  <string name="pref_general_server_ip">6.21.238.216</string>
    <string name="value_server_ip_must_be_not_empty">Server IP must be not Empty</string>
  <string name="pref_general_server_port">50000</string>
  <string name="pref_general_server_port_title">Server Port</string>
  <string name="pref_general_send_identificators_title">Identification</string>
  <string name="pref_general_send_indentificatiors_default">no_identification</string>
  <string name="value_server_port_must_be_not_empty">Server Port must be not Empty</string>
    <string name="value_identificatios_must_be_not_empty">Indentification must be not Empty</string>
</resources>
