<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="pref_key_main_screen">
  <androidx.preference.PreferenceCategory android:title="@string/pref_cat_general">
    <!--<androidx.preference.SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="pref_key_general_send_identificators"
        android:persistent="true"
        android:title="@string/pref_general_keep_send_identificators" />
        -->
    <androidx.preference.EditTextPreference
        android:defaultValue="no-identification"
        android:dialogTitle="@string/pref_general_send_identificators_title"
        android:key="pref_key_general_send_identificators"
        android:persistent="true"
        android:title="@string/pref_general_send_identificators_title" />

    <androidx.preference.EditTextPreference
        android:defaultValue="65.21.238.216"
        android:dialogTitle="@string/pref_general_server_ip_title"
        android:key="pref_key_general_server_ip"
        android:persistent="true"
        android:title="@string/pref_general_server_ip_title" />

    <androidx.preference.EditTextPreference
        android:defaultValue="50000"
        android:dialogTitle="@string/pref_general_server_port_title"
        android:key="pref_key_general_server_port"
        android:persistent="true"
        android:title="@string/pref_general_server_port_title" />

  </androidx.preference.PreferenceCategory>

  <androidx.preference.PreferenceCategory android:title="@string/logcat">
    <androidx.preference.EditTextPreference
        android:defaultValue="250"
        android:dialogTitle="@string/pref_poll_interval_title"
        android:key="pref_key_logcat_poll_interval"
        android:persistent="true"
        android:title="@string/pref_poll_interval_title" />

    <androidx.preference.MultiSelectListPreference
        android:dialogTitle="@string/pref_logcat_buffer_dialog_title"
        android:entries="@array/pref_logcat_log_buffers"
        android:entryValues="@array/pref_logcat_log_buffers_values"
        android:key="pref_key_logcat_buffers"
        android:persistent="true"
        android:summary=""
        android:title="@string/pref_logcat_buffer_dialog_title" />

    <androidx.preference.EditTextPreference
        android:defaultValue="250000"
        android:dialogTitle="@string/pref_logcat_max_recent_logs_to_keep_in_memory"
        android:key="pref_key_logcat_max_logs"
        android:persistent="true"
        android:title="@string/pref_logcat_max_recent_logs_to_keep_in_memory" />
  </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>